sumo/tests/traci/PositionConversion/InvalidPosOnRoad/testclient_out.traci
TraCITestClient output file. Date: Sat Oct  9 00:23:05 2010


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <PositionConversion>:
 DestPosition-RoadMap: roadId=e_m0 pos=-1.00 laneId=0 posId=3
.. Answered with error to command (113), [description: Position on lane must not be negative]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
